Changed left and right margins on Figure element to 0px (from 40px) because it was causing extra wide images (i.e. 1200px) to unintentionally overflow the content area. The 40px margin was also causing alignment issues for images contained within figure tags.

--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ svg:not(:root) {
 }
 
 figure {
-	margin: 1em 40px;
+	margin: 1em 0px;
 }
 
 hr {
